examples/test/testpolicy17848.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17848
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key28: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value10
          key49: value12
          key15: value40
      podSelector:
        matchLabels:
          key22: value10
